# Side-Assist-plus

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  lefthook.yml  mo.sh  package-lock.json  package.json  pc.sh  playwright-config.json  run.sh  stop.sh
.claude/: settings.local.json
MacCompanion/: Package.swift  README.md  http-server.swift  run.sh  start-mac.sh  test.sh
UltraDeepThinkDemo/: .gitignore  App.tsx  README_DEMO.md  README_SIMPLE.md  app.json  metro.config.js  package-lock.json  package.json
docs/: DESKTOP_APP_TECH_SELECTION.md  Side-Assist+_U☆PoC提案書.md  技術選定とBluetooth実装検討_.md
log/: 08071150-react-errors-fix.md  08071200-expo-version-fix.md
scripts/: android.sh  desktop.sh  ios.sh  metro.sh
side-assist-desktop/: .prettierignore  check-i18n.sh  eslint.config.js  package-lock.json  package.json  tailwind.config.js
side-assist-desktop/src-tauri/: Cargo.toml  tauri.conf.json
side-assist-desktop/src-tauri/capabilities/: default.json
side-assist-desktop/src-tauri/icons/: icon.icns
side-assist-desktop/src-tauri/src/: keyboard.rs  lib.rs  main.rs  network.rs  settings.rs  simulation.rs  storage.rs
side-assist-expo/: .env.example  .eslintrc.js  .gitignore  .null.swp  .prettierrc  app.config.js  app.json  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
side-assist-mobile/: App.tsx  app.json  babel.config.js  metro.config.js  nativewind-env.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
side-assist-server/: clipboard-monitor.swift  http-server.swift  start-mac.sh
(+166 files in other folders)
